force-app/main/default/objects/Office_Location__c/fields/Country_Check__c.field-meta.xml
<CustomField>
    <fullName>Country_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Country Check</label>
    <type>Checkbox</type>
</CustomField>