force-app/main/default/objects/Office_Location__c/fields/Country_french__c.field-meta.xml
<CustomField>
    <fullName>Country_french__c</fullName>
    <label>Country_french</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amérique</fullName>
            </value>
            <value>
                <fullName>Inde</fullName>
            </value>
            <value>
                <fullName>Australie</fullName>
            </value>
            <value>
                <fullName>Srilanka</fullName>
            </value>
            <value>
                <fullName>nouvelle-Zélande</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>