force-app/main/default/objects/Office_Location__c/fields/mycustom2__c.field-meta.xml
<CustomField>
    <fullName>mycustom2__c</fullName>
    <label>mycustom2</label>
    <referenceTo>mycustom2__c</referenceTo>
    <relationshipLabel>Office Locations</relationshipLabel>
    <relationshipName>Office_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>